--- a/app/src/main/res/layout/activity_devs.xml
+++ b/app/src/main/res/layout/activity_devs.xml
@@ -9,34 +9,37 @@
               android:baselineAligned="false">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <TextView
             android:text="Desenvolvedores:"
-            android:layout_width="280dp"
-            android:layout_height="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/textView9"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textAlignment="viewStart"
             android:textStyle="normal|bold"
-            android:layout_marginEnd="64dp"
+            android:layout_marginEnd="104dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="64dp"
+            android:layout_marginRight="104dp"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="parent"
-            />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintHorizontal_bias="1.0"/>
 
         <TextView
             android:text="O aplicativo foi desenvolvido por Anderson Faro Santana e Lucas Barbosa, responsável pelo designer. Para entrar em contato, é só falar pelo Twitter ou Behance:"
-            android:layout_width="323dp"
-            android:layout_height="78dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/textView10"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textAlignment="viewStart"
             tools:layout_editor_absoluteX="16dp"
-            android:layout_marginTop="64dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView9"/>
 
 
         <TextView
@@ -44,75 +47,99 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/contatos"
-            android:textSize="25sp"
+            android:textSize="20sp"
 
             android:textStyle="normal|bold"
             android:textAlignment="viewStart"
-            android:layout_marginEnd="240dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="240dp"
-            android:layout_marginTop="168dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginRight="16dp"
+            app:layout_constraintHorizontal_bias="0.33"/>
 
 
         <TextView
             android:text="twitter.com/andersonFaro9"
-            android:layout_width="218dp"
+            android:layout_width="wrap_content"
             android:autoLink="web"
             android:textColorLink="@color/background_white"
-            android:layout_height="23dp"
+            android:layout_height="wrap_content"
             android:id="@+id/andersonfaro9"
-            android:textSize="15sp"
-            android:layout_marginTop="224dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="128dp"
+            android:textSize="18sp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView8"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="128dp"
-            />
+            android:layout_marginRight="16dp"/>
 
         <TextView
             android:text="behance.net/Lucas-Barbosa"
             android:autoLink="web"
             android:textColorLink="@color/background_white"
-            android:layout_width="203dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/textView8"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textAlignment="viewStart"
-            android:layout_marginEnd="144dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/contatos"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="144dp"
-            android:layout_marginTop="200dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <ImageView
-            android:layout_width="345dp"
-            android:layout_height="142dp"
-            app:srcCompat="@drawable/ic_code"
-            android:id="@+id/ic_code"
-            android:scaleType="center"
-            tools:layout_editor_absoluteX="16dp"
-            android:layout_marginTop="296dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:layout_marginRight="16dp"/>
 
 
         <TextView
-            android:text="Repositório: https://goo.gl/6iQXf6"
+            android:text="Repositório no Github:"
             android:autoLink="web"
             android:textColorLink="@color/background_white"
-            android:layout_width="331dp"
-            android:layout_height="37dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/repositorio"
-            android:textSize="15sp"
-            android:layout_marginTop="456dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textStyle="normal|bold"
+            android:textSize="20sp"
             android:textAlignment="viewStart"
-            tools:layout_editor_absoluteX="16dp"/>
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/andersonfaro9"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            app:layout_constraintHorizontal_bias="0.44"/>
+
+
+        <TextView
+            android:text="https://goo.gl/6iQXf6"
+            android:autoLink="web"
+            android:textColorLink="@color/background_white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/link"
+            android:textSize="18sp"
+            android:textAlignment="viewStart"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/repositorio"
+            android:layout_marginTop="24dp"/>
 
     </android.support.constraint.ConstraintLayout>
 
-
+<!--https://goo.gl/6iQXf6-->
 
 
 </LinearLayout>
