--- a/app/src/main/res/layout/activity_maca.xml
+++ b/app/src/main/res/layout/activity_maca.xml
@@ -15,50 +15,42 @@
 
 
         <ImageButton
-            android:layout_width="47dp"
-            android:layout_height="62dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:srcCompat="@drawable/abc_aprender_b"
             android:background="@android:color/transparent"
             android:id="@+id/abc_aprender_b"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="368dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="128dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="120dp"
-            app:layout_constraintVertical_bias="0.81" />
+            android:layout_marginLeft="128dp"
+            />
 
         <ImageButton
-            android:layout_width="47dp"
-            android:layout_height="72dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_m"
             android:id="@+id/abc_aprender_m"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="352dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="168dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="168dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.79" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_b"
+            android:layout_marginLeft="16dp"/>
 
 
         <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_n"
             android:id="@+id/abc_aprender_n"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="336dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="216dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="216dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.75" />
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_m"
+            android:layout_marginLeft="8dp"/>
 
 
         <ImageButton
@@ -76,9 +68,9 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintTop_toBottomOf="@+id/abc_aprender_m"
-            app:layout_constraintHorizontal_bias="0.55"/>
+            app:layout_constraintHorizontal_bias="0.54"/>
 
 
     </android.support.constraint.ConstraintLayout>
