--- a/app/src/main/res/layout/activity_math_five_bear.xml
+++ b/app/src/main/res/layout/activity_math_five_bear.xml
@@ -15,21 +15,22 @@
         android:layout_height="match_parent">
 
 
-        <!--<ImageButton-->
-            <!--android:layout_width="244dp"-->
-            <!--android:layout_height="150dp"-->
-            <!--android:visibility="invisible"-->
-            <!--app:srcCompat="@drawable/button_avancar_ursos_math"-->
-            <!--android:background="@android:color/transparent"-->
-            <!--android:id="@+id/abc_botao_avancar_urso_math"-->
-            <!--android:layout_marginStart="16dp"-->
-            <!--app:layout_constraintLeft_toLeftOf="parent"-->
-            <!--android:layout_marginLeft="16dp"-->
-            <!--android:layout_marginEnd="16dp"-->
-            <!--app:layout_constraintRight_toRightOf="parent"-->
-            <!--android:layout_marginRight="16dp"-->
-            <!--app:layout_constraintHorizontal_bias="0.66"-->
-            <!--tools:layout_editor_absoluteY="352dp"/>-->
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/button_avancar_ursos_math"
+            android:background="@android:color/transparent"
+            android:id="@+id/abc_botao_avancar_urso_math"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            app:layout_constraintHorizontal_bias="0.55"
+            android:layout_marginTop="88dp"
+            app:layout_constraintTop_toBottomOf="@+id/abc_aprender_urso_five_bear"/>
 
 
         <ImageButton
@@ -38,15 +39,11 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_nove"
             android:id="@+id/abc_aprender_urso_nove"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toBottomOf="@+id/abc_aprender_urso_sete"
-            android:layout_marginEnd="80dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/abc_aprender_urso_sete"
-            android:layout_marginRight="80dp"
-            app:layout_constraintVertical_bias="0.0"/>
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_urso_oito"
+            android:layout_marginLeft="8dp"/>
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -54,13 +51,11 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_urso_cinco"
             android:id="@+id/abc_aprender_urso_five_bear"
-            app:layout_constraintRight_toLeftOf="@+id/abc_aprender_urso_oito"
-            tools:layout_constraintRight_creator="1"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toBottomOf="@+id/abc_aprender_urso_sete"
-            />
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_urso_sete"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
         <ImageButton
@@ -69,12 +64,11 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_oito"
             android:id="@+id/abc_aprender_urso_oito"
-            app:layout_constraintRight_toLeftOf="@+id/abc_aprender_urso_nove"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            app:layout_constraintTop_toTopOf="@+id/abc_aprender_urso_nove"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"/>
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_urso_five_bear"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
         <ImageButton
@@ -83,8 +77,11 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/abc_aprender_sete"
             android:id="@+id/abc_aprender_urso_sete"
-            tools:layout_editor_absoluteY="306dp"
-            tools:layout_editor_absoluteX="87dp"/>
+            android:layout_marginStart="88dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="88dp"
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
     </android.support.constraint.ConstraintLayout>
