--- a/app/src/main/res/layout/activity_math_orange_four.xml
+++ b/app/src/main/res/layout/activity_math_orange_four.xml
@@ -27,7 +27,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintLeft_creator="1"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="16dp"
             />
 
 
@@ -37,8 +37,8 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_urso_cinco"
             android:id="@+id/abc_aprender_orange_four_five_bear"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="176dp"
+            android:layout_marginTop="296dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toRightOf="@+id/abc_aprender_orange_4"
             android:layout_marginLeft="8dp"/>
@@ -50,15 +50,11 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_oito"
             android:id="@+id/abc_aprender_orange_oito"
-            android:layout_marginEnd="56dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="56dp"
+            android:layout_marginTop="296dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toRightOf="@+id/abc_aprender_urso_sete_orange"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintHorizontal_bias="0.21"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="176dp"/>
+            android:layout_marginLeft="8dp"/>
 
 
         <ImageButton
@@ -67,8 +63,8 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_sete"
             android:id="@+id/abc_aprender_urso_sete_orange"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="176dp"
+            android:layout_marginTop="296dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="40dp"
             app:layout_constraintLeft_toRightOf="@+id/abc_aprender_orange_four_five_bear"
             android:layout_marginLeft="40dp"/>
@@ -96,11 +92,11 @@
             app:srcCompat="@drawable/abc_aprender_urso_4"
             android:id="@+id/abc_aprender_orange_4"
 
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="176dp"
-            android:layout_marginStart="72dp"
+            android:layout_marginTop="296dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="64dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="72dp"/>
+            android:layout_marginLeft="64dp"/>
 
 
 
