--- a/app/src/main/res/layout/activity_math_orange_sete.xml
+++ b/app/src/main/res/layout/activity_math_orange_sete.xml
@@ -18,34 +18,40 @@
 
 
         <ImageButton
-            android:layout_width="48dp"
-            android:layout_height="64dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_sete"
             android:id="@+id/abc_aprender_sete_orange"
-            tools:layout_editor_absoluteX="69dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="176dp"/>
+            android:layout_marginStart="64dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="64dp"
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageButton
-            android:layout_width="43dp"
+            android:layout_width="wrap_content"
             android:background="@android:color/transparent"
-            android:layout_height="64dp"
+            android:layout_height="wrap_content"
             app:srcCompat="@drawable/abc_aprender_urso_cinco"
             android:id="@+id/abc_aprender_orange_button_cinco_sete"
-            tools:layout_editor_absoluteX="145dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="176dp"/>
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="48dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_sete_orange"
+            android:layout_marginLeft="48dp"/>
 
         <ImageButton
-            android:layout_width="56dp"
+            android:layout_width="wrap_content"
             android:background="@android:color/transparent"
-            android:layout_height="64dp"
+            android:layout_height="wrap_content"
             app:srcCompat="@drawable/abc_aprender_urso_6"
             android:id="@+id/abc_aprender_seis_orange_sete"
-            tools:layout_editor_absoluteX="215dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="176dp"/>
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="48dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_orange_button_cinco_sete"
+            android:layout_marginLeft="48dp"/>
 
 
         <ImageView
