--- a/app/src/main/res/layout/activity_math_orange_six.xml
+++ b/app/src/main/res/layout/activity_math_orange_six.xml
@@ -13,6 +13,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,55 +35,50 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_urso_4"
             android:id="@+id/abc_aprender_orange_4_seis"
-            tools:layout_constraintBottom_creator="1"
-            android:layout_marginStart="40dp"
-            app:layout_constraintBottom_toBottomOf="@+id/abc_aprender_orange_seis"
-            tools:layout_constraintLeft_creator="1"
+            android:layout_marginStart="48dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="40dp"/>
-
-
-        <ImageButton
-            android:layout_width="42dp"
-            android:layout_height="0dp"
-            android:background="@android:color/transparent"
-            app:srcCompat="@drawable/abc_aprender_urso_cinco"
-            android:id="@+id/abc_aprender_orange_six_five"
-            android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_orange_oito_seis"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="160dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintHorizontal_bias="0.14"/>
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
         <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            app:srcCompat="@drawable/abc_aprender_oito"
-            android:id="@+id/abc_aprender_orange_oito_seis"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="160dp"
-            android:layout_marginStart="40dp"
-            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_orange_seis"
-            android:layout_marginLeft="40dp"/>
+            app:srcCompat="@drawable/abc_aprender_urso_cinco"
+            android:id="@+id/abc_aprender_orange_six_five"
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_orange_oito_seis"
+            android:layout_marginLeft="8dp"/>
 
 
         <ImageButton
-            android:layout_width="43dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/abc_aprender_oito"
+            android:id="@+id/abc_aprender_orange_oito_seis"
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="56dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_orange_seis"
+            android:layout_marginLeft="56dp"/>
+
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_urso_6"
             android:id="@+id/abc_aprender_orange_seis"
+            android:layout_marginTop="312dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
             app:layout_constraintLeft_toRightOf="@+id/abc_aprender_orange_4_seis"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="160dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"/>
+            android:layout_marginLeft="8dp"/>
 
         <ImageView
             android:layout_width="65dp"
