--- a/app/src/main/res/layout/activity_math_two_bear.xml
+++ b/app/src/main/res/layout/activity_math_two_bear.xml
@@ -16,8 +16,8 @@
 
 
         <ImageButton
-            android:layout_width="244dp"
-            android:layout_height="150dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:visibility="invisible"
             app:srcCompat="@drawable/button_avancar_ursos_math"
             android:background="@android:color/transparent"
@@ -28,34 +28,38 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            app:layout_constraintHorizontal_bias="0.55"
-            android:layout_marginTop="56dp"
+            app:layout_constraintHorizontal_bias="0.54"
+            android:layout_marginTop="96dp"
             app:layout_constraintTop_toBottomOf="@+id/abc_aprender_urso_2"/>
 
 
         <ImageButton
-            android:layout_width="48dp"
-            android:layout_height="45dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_urso_2"
             android:id="@+id/abc_aprender_urso_2"
             android:layout_marginTop="304dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="136dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="120dp"/>
+            android:layout_marginLeft="136dp"/>
 
         <ImageButton
-            android:layout_width="43dp"
+            android:layout_width="wrap_content"
             android:background="@android:color/transparent"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             app:srcCompat="@drawable/abc_aprender_urso_4"
             android:id="@+id/abc_aprender_urso_4"
             android:layout_marginTop="304dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/abc_aprender_urso_2"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
 
     </android.support.constraint.ConstraintLayout>
