--- a/app/src/main/res/layout/activity_pera.xml
+++ b/app/src/main/res/layout/activity_pera.xml
@@ -16,50 +16,42 @@
 
 
         <ImageButton
-            android:layout_width="52dp"
-            android:layout_height="63dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:srcCompat="@drawable/abc_aprender_a"
             android:background="@android:color/transparent"
             android:id="@+id/abc_aprender_a"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="360dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="128dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="120dp"
-            app:layout_constraintVertical_bias="0.81" />
+            android:layout_marginLeft="128dp"
+            />
 
         <ImageButton
-            android:layout_width="47dp"
-            android:layout_height="72dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_e"
             android:id="@+id/abc_aprender_e"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="352dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="168dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="168dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.79" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_a"
+            android:layout_marginLeft="16dp"/>
 
 
         <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_i"
             android:id="@+id/abc_aprender_i"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="344dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="216dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="216dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.75" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_e"
+            android:layout_marginLeft="16dp"/>
 
 
 
@@ -78,9 +70,9 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            app:layout_constraintHorizontal_bias="0.55"
+            app:layout_constraintHorizontal_bias="0.54"
             app:layout_constraintTop_toBottomOf="@+id/abc_aprender_a"
-            android:layout_marginTop="40dp"/>
+            android:layout_marginTop="32dp"/>
 
 
     </android.support.constraint.ConstraintLayout>
