--- a/app/src/main/res/layout/activity_sobre.xml
+++ b/app/src/main/res/layout/activity_sobre.xml
@@ -43,10 +43,10 @@
 
         <TextView
             android:text="Abc Aprender é um aplicativo focado no aprendizado do alfabeto para crianças que estão aprendendo a ler. Aproveite o tempo livre com o seu filho ensinando um pouco do alfabeto. A nossa ideia surgiu com o apoio da webschool, escola online  com cursos gratuitos sobre tecnologia da informação."
-            android:layout_width="360dp"
-            android:layout_height="146dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/textView3"
-            android:textSize="15sp"
+            android:textSize="18sp"
             tools:layout_editor_absoluteX="0dp"
             android:layout_marginTop="80dp"
             app:layout_constraintTop_toBottomOf="@+id/abc_aprender"/>
