--- a/app/src/main/res/layout/activity_urso.xml
+++ b/app/src/main/res/layout/activity_urso.xml
@@ -17,29 +17,29 @@
 
 
         <ImageButton
-            android:layout_width="41dp"
-            android:layout_height="49dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_1"
             android:id="@+id/abc_aprender_number_1"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="216dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="48dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="48dp"/>
 
         <ImageButton
-            android:layout_width="41dp"
-            android:layout_height="41dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
 
             app:srcCompat="@drawable/abc_aprender_2"
             android:id="@+id/abc_aprender_number_2"
+            app:layout_constraintTop_toBottomOf="@+id/abc_aprender_number_1"
+            android:layout_marginTop="8dp"
             android:layout_marginStart="48dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/abc_aprender_number_1"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginLeft="48dp"/>
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -47,11 +47,11 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_3"
             android:id="@+id/abc_aprender_number_3"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/abc_aprender_number_2"
             android:layout_marginStart="48dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="48dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/abc_aprender_number_2"/>
+            android:layout_marginLeft="48dp"/>
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -69,8 +69,9 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="88dp"
-            app:layout_constraintTop_toBottomOf="@+id/abc_aprender_number_3"/>
+            android:layout_marginTop="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/abc_aprender_number_3"
+            />
 
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
