--- a/app/src/main/res/layout/activity_uva.xml
+++ b/app/src/main/res/layout/activity_uva.xml
@@ -1,64 +1,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-    android:paddingLeft="0dp"
-    android:paddingTop="0px"
-    android:background="@drawable/abc_aprender_uva"
-    android:paddingRight="0dp"
-    android:orientation="vertical" >
+              android:paddingLeft="0dp"
+              android:paddingTop="0px"
+              android:background="@drawable/abc_aprender_uva"
+              android:paddingRight="0dp"
+              android:orientation="vertical"
+              android:id="@+id/activity_uva_layout">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        >
 
         <ImageButton
-            android:layout_width="52dp"
-            android:layout_height="61dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:srcCompat="@drawable/abc_aprender_a"
             android:background="@android:color/transparent"
             android:id="@+id/abc_aprender_a"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="384dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="136dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="120dp"
-            app:layout_constraintVertical_bias="0.81" />
+            android:layout_marginLeft="136dp"
+            />
 
         <ImageButton
-            android:layout_width="47dp"
-            android:layout_height="72dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_e"
             android:id="@+id/abc_aprender_e"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="368dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="168dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="168dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.79" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_a"
+            android:layout_marginLeft="16dp"/>
 
 
         <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/abc_aprender_i"
             android:id="@+id/abc_aprender_i"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="352dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="216dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="216dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.75" />
+
+            app:layout_constraintLeft_toRightOf="@+id/abc_aprender_e"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
 
 
         <ImageButton
@@ -70,15 +64,29 @@
             app:srcCompat="@drawable/abc_botao_avancar"
             android:scaleType="center"
             android:id="@+id/abc_botao_avancar"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/abc_aprender_e"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            app:layout_constraintHorizontal_bias="0.56"/>
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/abc_aprender_e"
+            app:layout_constraintHorizontal_bias="0.66"/>
+
+        <!--<ToggleButton-->
+            <!--android:text="ToggleButton"-->
+            <!--android:textOff=""-->
+            <!--android:textOn=""-->
+            <!--android:layout_width="40dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:id="@+id/toggleButton"-->
+            <!--android:background="@drawable/botao_desligado"-->
+            <!--android:layout_marginTop="16dp"-->
+            <!--app:layout_constraintTop_toTopOf="parent"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--android:layout_marginLeft="16dp"/>-->
 
 
     </android.support.constraint.ConstraintLayout>
